# ssd-benchmark-rs

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  cliff.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: build.yml  deploy-to-dockerhub.yml  deploy-to-ghcr.yml  publish-to-dockerhub.yml  publish-to-gh-releases.yml  publish-to-ghcr.yml  release-binary-assets.yml  release-pr.yml  release.yml
.rpm/: Dockerfile  ssd-benchmark.spec
snap/: snapcraft.yaml
src/: fmt.rs  main.rs  statistics.rs  throughput.rs  timer.rs  utils.rs
