[package]
name = "ssd-benchmark"
description = "Super Simple Disk Benchmark - benchmarks the writing performance of your disk."
version = "1.1.8"
authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
include = ["src/**/*", "*.md"]

keywords = ["io", "commandline"]
categories = ["command-line-utilities"]
repository = "https://github.com/sassman/ssd-benchmark-rs"

[dependencies]
fastrand = "1.8.0"
figlet-rs = "0.1.4"

[[bin]]
name = "ssd-benchmark"

[package.metadata.rpm]
package = "ssd-benchmark"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
ssd-benchmark = { path = "/usr/bin/ssd-benchmark" }
