[package]
name = "ssd-benchmark"
description = "Super Simple Disk Benchmark - benchmarks the writing performance of your disk."
version = "1.2.3"
authors = ["Sven Kanoldt <sven@d34dl0ck.me>"]
edition = "2018"
license = "GPL-3.0-only"
include = ["src/**/*", "*.md"]

keywords = ["io", "commandline"]
categories = ["command-line-utilities"]
repository = "https://github.com/sassman/ssd-benchmark-rs"

[dependencies]
fastrand = "2.3"
figlet-rs = "0.1.5"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "ssd-benchmark"

[package.metadata.rpm]
package = "ssd-benchmark"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
ssd-benchmark = { path = "/usr/bin/ssd-benchmark" }
